mudanças na estrutura

--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
   
   <main id="full-screen">
     <section id="advices">
-      <small id="id-">advice #1</small>
-      <p id="adviceP">"Conselho aqui"</p>
-      <img src="images/pattern-divider-desktop.svg" alt="divider">
+      <small id="id">advice #1</small>
+      <p id="adviceP">"Conselho aqui, vamos fiinir que é grande o suficiente lallalallalalalalla"</p>
+      <img src="images/pattern-divider-desktop.svg" alt="divider" id="divider">
       <button><img src="/images/icon-dice.svg" alt="clique - gerar conselho"></button>
     </section>
-
-    <footer>
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </footer>
   </main>
 
   <script src="assets/script.js"></script>
