estilização desktop: finalizada

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   
   <main id="full-screen">
     <section id="advices">
-      <small id="id">advice #1</small>
-      <p id="adviceP">"Conselho aqui, vamos fiinir que é grande o suficiente lallalallalalalalla"</p>
+      <small id="id">advice #id</small>
+      <p id="adviceP">"Conselho aqui"</p>
       <img src="images/pattern-divider-desktop.svg" alt="divider" id="divider">
-      <button><img src="/images/icon-dice.svg" alt="clique - gerar conselho"></button>
+      <div class="button-container">
+        <button id="generate-ad"><img src="/images/icon-dice.svg" alt="clique - gerar conselho"></button>
+      </div>
     </section>
   </main>
 
