--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main id="full-screen">
     <section id="advices">
       <small id="id">advice #id</small>
-      <p id="adviceP">"Conselho aqui"</p>
+      <p id="adviceP">Click to receive advice.</p>
       <img src="images/pattern-divider-desktop.svg" alt="divider" id="divider">
       <div class="button-container">
         <button id="generate-ad"><img src="/images/icon-dice.svg" alt="clique - gerar conselho"></button>
